# pngSvg

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  supervisord.conf
BackgroundRemoverOfObject/: .gitignore  Dockerfile  README.md  deleteBackground.py  gemini.py  pyproject.toml  requirements.txt  svg.py
BackgroundRemoverOfObject/app/: main.py
BackgroundRemoverOfObject/app/routes/: script_routes.py
src/app/: bot.py  main.py
src/app/routes/: script_routes.py
src/services/: delete_background.py  gemini_service.py  svg_converter.py
svgBot/: .env  Dockerfile  bot.py
