[project]
name = "backgroundremoverofobject"
version = "0.1.0"
description = ""
authors = [
    {name = "Zurgambayev",email = "polveko50@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn[standard] (>=0.30.0,<1.0.0)",
    "pillow (>=12.1.0,<13.0.0)",
    "rembg (>=2.0.0,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "replicate (>=1.0.7,<2.0.0)",
    "fal-client (>=0.11.0,<0.12.0)",
    "google-genai (>=1.59.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
