[tool.poetry]
name = "backgroundremoverofobject"
version = "0.1.0"
description = ""
authors = ["Zurgambayev <polveko50@mail.ru>"]

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = "^0.128.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pillow = "^12.1.0"
rembg = "^2.0.0"
requests = "^2.32.5"
replicate = "^1.0.7"
fal-client = "^0.11.0"
google-genai = "^1.59.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
